Added request types. Added TokenisationService. Added StemmingService.